# cppseed

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  engineering-change.yml
.github/requirements/: spdx-tools-0.8.5-linux-py310.txt
.github/scripts/: check-documentation-governance.sh  run-supply-chain-feasibility.sh
.github/workflows/: ci.yml  release.yml  supply-chain-feasibility.yml
cmake/: CompilerWarnings.cmake
docs/: README.md  basic-design.md  detailed-design.md  development-process.md  release-plan.md  requirements.md  supply-chain-requirements.md  test-plan.md
docs/adr/: README.md
docs/initiatives/supply-chain/: README.md  detailed-design.md  external-design.md  feasibility-evidence.json  feasibility-plan.md  feasibility-report.md  requirements.md  test-plan.md  threat-model.md  traceability.md
docs/releases/: v0.1.0.md
docs/templates/: README.md  acceptance-report-template.md  adr-template.md  detailed-design-template.md  external-design-template.md  initiative-readme-template.md  release-runbook-template.md  requirements-template.md  test-plan-template.md  test-report-template.md  threat-model-template.md  traceability-template.md
include/cppseed/: application.hpp  cli.hpp  diagnostic.hpp  file_system.hpp  project_generator.hpp  project_name.hpp  template_catalog.hpp  template_renderer.hpp  types.hpp
src/: application.cpp  cli.cpp  diagnostic.cpp  file_system.cpp  main.cpp  project_generator.cpp  project_name.cpp  template_catalog.cpp  template_renderer.cpp  types.cpp
tests/: CMakeLists.txt  e2e.cmake  fake_file_system.cpp  fake_file_system.hpp  measure_performance.py  test_application.cpp  test_cli.cpp  test_diagnostic.cpp  test_file_system.cpp  test_framework.hpp  test_main.cpp  test_project_generator.cpp  test_project_name.cpp  test_template_renderer.cpp
(+3 files in other folders)
